# rode

./: .gitignore  AGENTS.md  Cargo.toml  README.md  design.html
design/: README.md  rode-design.html  rode-signal-foundry.html
docs/: architecture.md
packaging/: dev.rode.Rode.desktop  dev.rode.Rode.metainfo.xml  install.sh
src/: actions.rs  agent.rs  app.rs  codex.rs  codex_auth.rs  conversation.rs  diff.rs  editor.rs  git.rs  main.rs  notifications.rs  perf.rs  persistence.rs  project.rs  terminal.rs  theme.rs
src/ui/: button.rs  mod.rs  modal.rs  selectable_row.rs  split_pane.rs  tabs.rs  toast.rs
src/views/: message_card.rs  mod.rs
