[package]
name = "rode"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A native Wayland control plane for coding agents"

[dependencies]
anyhow = "1.0"
async-channel = "2.5"
gpui = { git = "https://github.com/zed-industries/zed.git", rev = "b2db24e58a085de575a875c151963c98e1a60bec", default-features = false, features = ["wayland"] }
gpui_platform = { git = "https://github.com/zed-industries/zed.git", rev = "b2db24e58a085de575a875c151963c98e1a60bec", default-features = false, features = ["wayland"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.12"

[profile.dev]
debug = 1

[profile.release]
lto = "thin"
strip = "symbols"
